--- a/platform/platform-api/resources/messages/IdeBundle.properties
+++ b/platform/platform-api/resources/messages/IdeBundle.properties
@@ -1429,7 +1429,7 @@ empty.text.go.to.file=Go to File
 empty.text.project.view=Project View
 empty.text.drop.files.to.open=Drop files here to open them
 # Sherlock: Advertise mew capture functionality on empty project page
-empty.text.new.capture=Click on the New Capture button on toolbar to take a capture
+empty.text.new.capture=Click on the New Capture button on the toolbar to take a capture
 scratches.and.consoles=Scratches and Consoles
 action.DumbAware.BuildView.text.stop=BuildView
 action.DumbAware.CopyrightProfilesPanel.description.stop=Stop
